welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
if (lm="R") 
      ^BDRBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
if (lm="L")
      ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
if (lm="I")
      ^BDRBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
if (lm="A")
      ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
if (lm="B")
      ^BDRBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
if (lm="C")
      ^BDRBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
if (lm="Z")
      ^BDRBuggle:21: error: type mismatch;
 found   : Unit
 required: Boolean
if (lm="Y")
      ^BDRBuggle:23: error: type mismatch;
 found   : Unit
 required: Boolean
if (lm="X")
      ^